syntax = "proto3";

package pb;

option go_package = "./user";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string accessToken = 3;
}

// Validate

message ValidateRequest {
  string accessToken = 1;
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string userId = 3;
}
